# vocabulary

./: README.md
backend/: Cargo.toml
backend/sql/: db.sql
backend/src/: main.rs
backend/src/db/: mod.rs  post.rs
backend/src/error/: mod.rs
backend/src/handler/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: main.rs
frontend/src/post/: api.rs  create.rs  detail.rs  list.rs  mod.rs
frontend/src/route/: mod.rs
