[package]
name = "backend"
version = "0.1.0"
authors = ['Horza']
edition = "2021"

[dependencies]
tokio = { version = "=1.20.1", features = ["full"] }
warp = "0.3.2"
mobc = "=0.7.3"
mobc-postgres = { version = "=0.7.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = "1.0.143"
serde_json = "=1.0.85"
serde_derive = "1.0.143"
thiserror = "1.0.33"
sqlx = { version = "0.6.1", features = [ "runtime-tokio-rustls", "postgres" ] }
common = { version = "0.1.0", path = "../common" }

[profile.dev]
debug = 0