[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2.4"
yew = "0.19.3"
wasm-bindgen ="0.2.82"
wasm-bindgen-futures ="0.4.32"
serde_json = "1.0.83"
serde = {version = "=1.0.144", features = ["derive"] }
anyhow = "1.0.62"
yew-router = "0.16.0"
gloo = "0.8.0"
gloo-dialogs = "0.1.1"
common = { version = "0.1.0", path = "../common" }
web-sys = { version = "0.3.59", features = ["HtmlInputElement", "EventTarget", "MouseEvent", "Window"] }